--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Consultar CEP</title>
   </head>
   <body>
@@ -51,6 +51,6 @@
       </div>
       <div class="imagem"></div>
     </main>
-    <script src="main.js"></script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
